--- a/src/Suggestion.css
+++ b/src/Suggestion.css
@@ -9,7 +9,7 @@
 }
     
 .header-curve {
-  background: linear-gradient(to right, #1563b2, #900f8c);
+  background: linear-gradient(to right, #0077bf, #6f42c1);
   padding: 20px;
   border-top-left-radius: 40px;
   border-top-right-radius: 40px;
