--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 * {
     margin: 0;
-    padding: 0;
+    padding: 4;
 }
 
 #job-type {
@@ -34,11 +34,14 @@
     margin-top: 30px;
     background-color: white;
     border-radius: 50px 50px 0px 0px;
-    padding-left: 25px;
-    padding-top: 20px;
+    padding: 11px;
     font-family: 'poppins', sans-serif;
 }
+.sub-container p {
+    font-size: 16px;
+    padding: 20px;
 
+}
 
 #sub-containe li {
     margin-left: 10px;
@@ -57,28 +60,26 @@
 #btnContainer>button:first-child {
     background-image: linear-gradient(45deg,#0077bf, #7f1985);
     padding: 15px;
-    padding-left: 0px;
+    font-size: 18px;
     color: white;
-    font-weight: 400;
-    font-family: 'poppins', 'Inter', sans-serif;
-    width: 450px;
-    height: 45px;
-    margin-bottom: 0px;
-    border-radius: 5px;
+    font-size: 18px;
+    width: 80%;
+    text-align: center;
+    border: none;
+    border-radius: 8px;
+    align-self: center;
+    font-weight: 600;
+
 
    
 }
 
 #btnContainer>button:last-child {
-    background-color: transparent;
-    padding: 15px;
-    color: rgb(13, 13, 13);
-    font-weight: 400;
-    font-family:'poppins', sans-serif;
-    width: 400px;
-    margin-bottom: 300px;
-    border-radius: 5px;
-    border: none;
+   background-color: transparent;
+   padding: 1px;
+   color: rgb(19, 19, 19);
+   font-weight: 400;
+   border: none;
 }
 
 #btn-showMore {
