--- a/src/Suggestion.css
+++ b/src/Suggestion.css
@@ -44,13 +44,16 @@
 
 .tabs {
   display: flex;
-  justify-content: center;
-  gap: 350px;
+ border: none;
+ font-weight: ;
+ cursor: pointer;
+ justify-content: space-between;
+
   margin-bottom: 30px;
   box-shadow: 1px 5px 20px rgba(0, 0, 0, 0.358);
   background-color: #FFFFFF;
-  padding: 10px ;
-  border-radius: 10px;
+  padding: 8px 16px ;
+  border-radius: 8px;
 }
 
 .tabs button {
@@ -81,11 +84,12 @@
   background: #ffffffff;
   box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.358);
   padding: 5px 10px;
-  border-radius: 12px;
+  border-radius: 14px;
   /* box-shadow: 0 0 5px rgba(158, 27, 27, 0.08); */
   display: flex;
   justify-content: space-between;
   align-items: center;
+  cursor: pointer;
 }
 
 .user-info {
@@ -113,13 +117,13 @@
 }
 
 .follow-button {
-  padding: 6px 14px;
+  padding: 4px 6px;
   border: none;
   border-radius: 20px;
-  font-size: 13px;
+  font-size: 10px;
   font-weight: bold;
   color: #f4f1f1;
-  cursor: pointer;
+ 
   background: linear-gradient(to right, #721d71, #0177b6);
 }
 
